[package]
name = "lsd_program"
version = "0.1.0"
description = "SVM lsd program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lsd_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata", "token"] }
staking_program = { git = "https://github.com/stafiprotocol/svm-staking-contracts.git", rev = "cc5d5f6d6931fbd5be06289990f4c60d2c4fc5ed", features = [
    "cpi",
] }
mpl-token-metadata = "3.2.3"