[package]
name = "lsd_program"
version = "0.1.0"
description = "SVM lsd program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lsd_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata", "token"] }
staking_program = { git = "https://github.com/stafiprotocol/svm-staking-contracts.git", rev = "fce1632adcd3ff4cb0b6248cdb85c8f9ecc6f8b1", features = [
    "cpi",
] }
mpl-token-metadata = "3.2.3"