[package]
name = "lsd_program"
version = "0.1.0"
description = "SVM lsd program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lsd_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata", "token"] }

staking_program = { git = "https://github.com/chaosfinance/svm-staking-contracts.git", rev = "d8a2e5bcf7b76699d1e71d95b9ce8b352e660903", features = [
    "cpi",
] }
mpl-token-metadata = "3.2.3"
